# ornithe-installer-rs

./: Cargo.toml  Cross.toml  README.md  build.gradle.kts  build.rs  settings.gradle.kts
.github/workflows/: build.yml  publish.yml
res/packformat/: instance.cfg
res/packformat/patches/: net.fabricmc.intermediary.json
src/: errors.rs  main.rs
src/actions/: client.rs  mmc_pack.rs  mod.rs  server.rs
src/net/: manifest.rs  meta.rs  mod.rs
src/ui/: cli.rs  gui.rs  mod.rs
