[package]
name = "ornithe-installer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
egui_dialogs = "0.3.7"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
