[package]
name = "ornithe-installer-rs"
version = "0.1.0"
edition = "2024"
authors = [
    "moehreag"
]

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["cargo", "derive", "string"] }
cli-clipboard = "0.4.0"
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
egui-dropdown = "0.13.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tauri-rfd = "0.1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
webbrowser = "1.0.4"
zip = { version = "2.6.1", features = ["deflate-flate2"] }

[build-dependencies]
embed-resource = "1.6.0"
winres = "0.1.11"

[profile.release]
lto = true
opt-level = 's'

[build]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libxcb-render0-dev:$CROSS_DEB_ARCH libxcb-shape0-dev:$CROSS_DEB_ARCH libxcb-xfixes0-dev:$CROSS_DEB_ARCH libxkbcommon-dev:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH libgtk-3-dev:$CROSS_DEB_ARCH"

]
